# haemolacriaa

./: Cargo.toml  README.md  build.rs  config.rs  deploy.sh  haemolacriaa.nix  haemolacriaa.service  nginx.conf  tailwind.config.js  update-tailwind
migrations/: 0001_create_song_table.sql  0002_create_product_table.sql
src/: app.rs  app_state.rs  cdn.rs  config.rs  error.rs  fileserv.rs  jwt.rs  lib.rs  main.rs  pool.rs  router.rs  song_db.rs  state.rs  upload.rs  util.rs  utils.rs
src/api/: auth.rs  cdn.rs  csrf.rs  jwt.rs  mod.rs  song_db.rs  stripe.rs
src/components/: buttons.rs  card.rs  footer.rs  forms.rs  lists.rs  misc.rs  mod.rs  nav.rs
src/pages/: admin.rs  home.rs  mod.rs  releases.rs  shop.rs
src/pages/shop/: bag.rs  home.rs  item.rs  mod.rs  nav.rs  product.rs  products.rs  shop.rs  storage.rs
src/types/: images.rs  links.rs  mod.rs  product.rs  routes.rs  song.rs
style/: tailwind.css
